fix: layout problems

--- a/src/components/FilterTabs/FilterTabs.scss
+++ b/src/components/FilterTabs/FilterTabs.scss
@@ -4,7 +4,7 @@
 }
 
 .select {
-  padding: 0 20px 10px;
+  padding: 0 20px;
   font-weight: bold;
   color: #0aaee4;
   background-color: transparent;
