--- a/src/components/MovieItem/MovieItem.scss
+++ b/src/components/MovieItem/MovieItem.scss
@@ -27,7 +27,7 @@
   box-sizing: border-box;
   width: 250px;
   height: 100px;
-  padding: 0 20px;
+  padding: 15px 20px 0;
   background-color: white;
 
   .title {
