--- a/src/components/WatchNowWindow/WatchNowWindow.scss
+++ b/src/components/WatchNowWindow/WatchNowWindow.scss
@@ -16,6 +16,10 @@
   &:hover {
     display: flex;
   }
+
+  .watchNow {
+    margin-bottom: 15px;
+  }
 }
 
 .watch {
