--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -1,10 +1,12 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: absolute;
   box-sizing: border-box;
-  display: flex;
-  align-items: center;
+  max-width: 1280px;
   width: 100%;
-  margin: 0 auto;
+  margin: 15px auto 0;
   padding: 0 5%;
 
   .title {
