--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,3 +17,7 @@ body {
 ul {
   list-style: none;
 }
+
+button, input, select {
+  outline: none;
+}
